--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     body {
       font-family: 'Malgun Gothic', '맑은 고딕', 'Apple SD Gothic Neo', sans-serif;
-      background: #f5f5f5;
+      background: transparent;
       color: #333;
       line-height: 1.6;
       font-size: 14px;
